# mkmchat-mcp

./: .dockerignore  .env.docker.example  .env.docker.example.low  .gitignore  ABILITIES_OPTIMIZATION.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  EQUIPMENT_MIGRATION.md  GEMINI_INTEGRATION.md  GEMINI_QUICK_REFERENCE.md  GEMINI_VS_OLLAMA.md  OLLAMA_INTEGRATION.md  OLLAMA_QUICK_REFERENCE.md  OLLAMA_SUMMARY.md  PROJECT_STATUS.md  RAG_IMPLEMENTATION.md  RAG_QUICK_REFERENCE.md  RAG_SYSTEM.md  README.md  TSV_STRUCTURE_UPDATE.md  docker-compose.yml  mkmchatprogress.kanban  pyproject.toml  rag_analysis.md  setup_gemini.sh  setup_ollama.sh  start-webapp.ps1  test_ollama.py  test_tsv_structure.py
docker/ollama/: Dockerfile  start-ollama.sh
mkmchat/: __init__.py  __main__.py  http_server.py  server.py
mkmchat/data/: __init__.py  loader.py  rag.py
mkmchat/llm/: __init__.py  gemini.py  ollama.py
mkmchat/models/: __init__.py  character.py  equipment.py  team.py
mkmchat/scratch/: check_rag.py  test_retrieval_fix.py  verify_boost.py
mkmchat/tools/: __init__.py  character_info.py  equipment_info.py  llm_tools.py  semantic_search.py  team_suggest.py
tests/: __init__.py  test_chat_history.py  test_data_loader.py  test_endpoint_contracts.py  test_explain_mechanic_flow.py  test_gemini.py  test_rag.py  test_server_dispatch.py  test_tools.py
webapp/: .env.docker.example  .env.example  Dockerfile  composer.json  package-lock.json  tailwind.config.js
webapp/config/: mkm.php  session.php
webapp/docker/: start-webapp.sh
(+81 files in other folders)
