[project]
name = "mkmchat"
version = "0.1.0"
description = "MCP server for Mortal Kombat Mobile game assistance"
authors = [{name = "Ivan"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "google-generativeai>=0.3.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mkmchat", "mkmchat.models", "mkmchat.data", "mkmchat.tools", "mkmchat.llm"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
